--- a/views/demo.ejs
+++ b/views/demo.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1141,4 +1141,4 @@ font-size: 12px;
 line-height: 15px;
 text-align: center;
 
-color: #FFFFFF; -->
+color: #FFFFFF; --> -->
