--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,25 +4,88 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Twisted Monopoly</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik+Marker+Hatch&family=Rubik+Distressed">
+    <style>
+        #twisted {
+          font-family: 'Rubik Marker Hatch', serif;
+          font-size: 72px;
+          color: white;
+        }
+        #player {
+          font-family: 'Rubik Distressed', serif;
+          font-size: 24px;
+          color: white;
+        }
+        #player:hover {
+          color: rgb(157, 79, 79);
+        }
+        #user1, #user2{
+          background: none;
+          color: aliceblue;
+        }
+        #user1:hover {
+          background: rgb(224, 198, 180);
+          color: rgb(1, 6, 11);
+        }
+        #user2:hover {
+          background: rgb(224, 198, 180);
+          color: rgb(1, 6, 11);
+        }
+        #formbox {
+          width: 1500px;
+        }
+        #str {
+          background: rgb(224, 198, 180);
+          border: none;
+          width: 90px;
+          padding: 10px;
+          border-radius: 5px;
+        }
+        #str:hover {
+          background: rgb(157, 79, 79);
+          color: white;
+        }
+        body { 
+          background-image:url('https://media3.giphy.com/media/l1J9MEtVCpe5tpoly/giphy.gif?cid=790b7611988a8ad696c39ba2b686b59af887388da7af67e9&rid=giphy.gif&ct=g'); 
+          background-repeat:repeat; 
+          background-size: cover;
+        }
+      </style>
 </head>
 <body>
-    <h2>Twisted Monopoly</h2>
-    <form action="/monopoly/1" method="POST">
-        <div>
+    <h2 id="twisted" class="d-flex justify-content-center mt-3">Twisted Monopoly</h2>
+    <div class="d-flex justify-content-center mt-5">
+        <form action="/monopoly/1" method="POST">
+        <div id="formbox" class="d-flex justify-content-evenly">
             <section>
-                <h3>Player 1</h3>
-                <label for="user1">Name: </label>
-                <input type="text" name="user1" id="user1" placeholder="userame">
+                <h4 id="player" class="d-flex justify-content-center mt-3">Player 1</h4>
+                <!-- <label for="user1">Name: </label>
+                <input type="text" name="user1" id="user1" placeholder="userame"> -->
+                <div class="input-group flex-nowrap">
+                    <span class="input-group-text" id="addon-wrapping">@</span>
+                    <input type="text" class="form-control" name="user1" id="user1" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+                </div>
             </section>
             <section>
-                <h3>Player 2</h3>
-                <label for="user2">Name: </label>
-                <input type="text" name="user2" id="user2" placeholder="username">
+                <h4 id="player" class="d-flex justify-content-center mt-3">Player 2</h4>
+                <!-- <label for="user2">Name: </label>
+                <input type="text" name="user2" id="user2" placeholder="username"> -->
+                <div class="input-group flex-nowrap">
+                    <span class="input-group-text" id="addon-wrapping">@</span>
+                    <input type="text" class="form-control" name="user2" id="user2" placeholder="Username" aria-label="Username" aria-describedby="addon-wrapping">
+                </div>
             </section>
         </div>
         <br>
-        <button>Start</button>
-    </form>
+        <div class="d-flex justify-content-center mt-5">
+            <button id="str">Start</button>
+        </div>
+        </form>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
+    
