--- a/views/purchase.ejs
+++ b/views/purchase.ejs
@@ -1,20 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monopoly</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body> 
-    <form action="/monopoly/<%=p%>" method="post">
-        <h2><%= currentBlock.object.title %></h2>
-        Do you want to buy <%= currentBlock.object.title %>? 
-        <button class="btn btn-primary" name="buy" value="on">Buy</button>
-        <button class="btn btn-primary" name="pass" value="on">Pass</button>
-    </form>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-</body>
-</html>
+    <% layout('layouts/boilerplate') %>
+    <div class="d-flex justify-content-center mt-3 border border-primary">
+        <form action="/monopoly/<%=p%>" method="post">
+            <h2 class="d-flex justify-content-center"><%= currentBlock.object.title %></h2>
+            <div>
+                Here will be image of <%= currentBlock.object.title %>
+            </div>
+            <div>
+                Price: <%= currentBlock.object.price %>
+            </div>
+            <section>
+                <div class="mt-3">
+                    Do you want to buy <%= currentBlock.object.title %>? 
+                </div>
+                <div class="mt-3">
+                    <button class="btn btn-primary" name="buy" value="on">Buy</button>
+                    <button class="btn btn-primary" name="pass" value="on">Pass</button>
+                </div>
+            </section>
+        </form>
+    </div>
