--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -1,32 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monopoly</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body>
+    <% layout('layouts/boilerplate') %>
     <% if(currentBlock.object.title!=='Atlas'){ %>
         <% let i = Math.floor(Math.random()*(currentBlock.object.quiz.length)) %>  
-        <form action="/monopoly/<%=p%>/<%=i%>" method="post"> 
-                <%= currentBlock.object.quiz[i].question %>
-                <% for(option of currentBlock.object.quiz[i].options){ %>
-                    <br>
-                    <input type="radio" id="<%=option%>" name="chosen" value="<%=option%>">
-                    <label for="<%=option%>"><%= option %></label>
-                <% } %> 
-                <% currentBlock.object.quiz.splice(i,1) %> 
-            <button class="btn btn-primary">Submit</button>
-        </form>
+        <section class="d-flex justify-content-center mt-3 border border-primary">
+            <div class="mt-1">
+                <form action="/monopoly/<%=p%>/<%=currentBlock.object.quiz[i].answer%>" method="post"> 
+                    <h2 class="d-flex justify-content-center mt-3"><%=currentBlock.object.title%></h2>
+                    Q. <%= currentBlock.object.quiz[i].question %>
+                    <div>
+                        <% for(option of currentBlock.object.quiz[i].options){ %>
+                            <br>
+                            <input type="radio" id="<%=option%>" name="chosen" value="<%=option%>">
+                            <label for="<%=option%>"><%= option %></label>
+                        <% } %> 
+                    </div>
+                    <% currentBlock.object.quiz.splice(i,1) %> 
+                    <div class="mt-3">
+                        <button class="btn btn-primary">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </section>
     <% }else{ %>
         <% let i = Math.floor(Math.random()*currentBlock.object.place.length)%> 
-        <img src="<%=currentBlock.object.place[i].img%>" alt="<%=currentBlock.object.place[i].what%>">
+        <img src="images/aachi.jpg" class="img-fluid" alt="petra">
 
         
     <% } %> 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-</body>
-</html>
