--- a/views/purchase.ejs
+++ b/views/purchase.ejs
@@ -27,9 +27,9 @@
                     </form>
                   </li>
                 </ul>
-                <div class="card-body">
+                <!-- <div class="card-body">
                   <a href="#" class="card-link">Card link</a>
                   <a href="#" class="card-link">Another link</a>
-                </div>
+                </div> -->
               </div>
         </div>
