--- a/views/game.ejs
+++ b/views/game.ejs
@@ -283,37 +283,47 @@
             <% } %> 
         </div>
     </div>
-    
-        <form action="/monopoly/1" method="get">
-            <h3><%= users[0] %></h3>
-            Points available: <%= player1.points %> <br>
-            Properties owned: 
-            <ul>
-                <% for(let own of player1.owned){ %>
-                    <li><%= own %></li> 
-                <% } %>
-            </ul>
-             
-            <button id="Player1">Roll</button>
-        </form>
-        <form action="/monopoly/2" method="get">
-            <h3><%= users[1] %></h3>
-            Points available: <%= player2.points %> <br>
-            Properties owned: 
-            <ul>
-                <% for(let own of player2.owned){ %>
-                    <li><%= own %></li> 
-                <% } %> 
-            </ul>
-            <button id="Player2">Roll</button>
-        </form>
-    
-    
-    <script>
-        $(document).ready(function(){
-            $("#exampleModal").modal('show');
-        });
-    </script>
+        
+        <div class="row">
+            <div class="col-sm-6">
+              <div class="card <%= (player1.chance===true ? 'card text-white bg-dark mb-3' : '') %> mb-3">
+                <h5 class="card-header"><%= users[0] %></h5>
+                <div class="card-body">
+                  <h5 class="card-title">Points available: &#8377 <%= player1.points %></h5>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item"> 
+                        Properties owned: 
+                        <ul>
+                            <% for(let own of player1.owned){ %>
+                                <li><%= own %></li> 
+                            <% } %> 
+                        </ul>
+                    </li>
+                    <li class="list-group-item"><a href="/monopoly/1" class="btn btn-primary">Roll Die</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="card <%= (player2.chance===true ? 'card text-white bg-dark mb-3' : '') %>">
+                <h5 class="card-header"><%= users[1] %></h5>
+                <div class="card-body">
+                  <h5 class="card-title">Points available: &#8377 <%= player2.points %></h5>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        Properties owned: 
+                        <ul>
+                            <% for(let own of player2.owned){ %>
+                                <li><%= own %></li> 
+                            <% } %> 
+                        </ul>
+                    </li>
+                    <li class="list-group-item"><a href="/monopoly/2" class="btn btn-primary">Roll Die</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+        </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
