--- a/views/jail.ejs
+++ b/views/jail.ejs
@@ -20,17 +20,58 @@
             <div class="card-body">
               <h5 class="card-title">Jail</h5>
               <p class="card-text">You comitted a crime and ended up in a Jail. If you want to get bailed then your only option is to pay &#8377 50 or else you will have to stay here for eternity.</p>
+              <% if(canbail===false){ %>
+                <p class="card-text">It looks like your balance is less than &#8377 50. You can pay the fine by selling any one of your lands.</p>
+              <% } %> 
               <form action="/monopoly/<%=p%>/jail" method="GET">
                 <div class="input-group flex-nowrap">
                     <span class="input-group-text" id="addon-wrapping">&#8377</span>
                     <input type="number" name="fine" class="form-control" placeholder="Fine" aria-describedby="addon-wrapping">
                 </div>
-                <button class="btn btn-primary mt-2">Pay</button>
+                <% if(canbail===true){ %> 
+                    <button class="btn btn-primary mt-2">Pay</button>
+                <% }else{ %>
+                    <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#sellforjail">Sell</a>
+                <% } %> 
               </form>
             </div>
         </div>
     </div>
 
+
+    <div class="modal fade" id="sellforjail" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel">Selling your land</h5>
+              <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
+            </div>
+            <form action="/monopoly/<%=p%>/sell">
+              <div class="modal-body">
+                <p>
+                  <img src="https://res.cloudinary.com/dc4kfswj7/image/upload/v1669310854/dsMp/7208dd_jwxqzv.jpg" alt="BROKE" width="450px" height="350px">
+                </p>
+                <label class="form-label" for="teleport">Among the cities you have owned, which do want to sell? (to the Bank ofc)</label> <br>
+                <select name="toSell" id="selling">
+                  <% if(p===1){ %>
+                    <%for(city of player1.owned){%>
+                      <option class="form-control" value="<%= city %>"><%= city %></option>
+                    <%}%>
+                  <% }else{ %>
+                    <%for(city of player2.owned){%>
+                      <option class="form-control" value="<%= city %>"><%= city %></option>
+                    <%}%>
+                  <% } %> 
+                  
+              </select>
+              </div>
+              <div class="modal-footer">
+                <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
+              <button class="btn btn-primary" data-bs-dismiss="modal">Sell</button>
+            </form>
+            </div>
+          </div>
+        </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
