--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik+Marker+Hatch&family=Rubik+Distressed">
     <style>
         body { 
-            background-image: radial-gradient(#009E60, #000080, #228B22);
+            background-image: radial-gradient(red, yellow, black);
             background-size: cover;
         }
     </style>
