--- a/views/game.ejs
+++ b/views/game.ejs
@@ -71,6 +71,28 @@
             width : 520px ;
             margin-left : 370px ; 
         }
+        .token{
+            /* background-color: rgb(8, 27, 78); */
+            background-image: linear-gradient(yellow, orange);
+            border: 4px;
+            color: black;
+            box-shadow: 5px 5px 5px black;
+            border-radius: 50%;
+        }
+        .token2{
+            /* background-color: rgb(8, 27, 78); */
+            background-image: linear-gradient(lightblue, green);
+            border: 4px;
+            color: black;
+            box-shadow: 5px 5px 5px black;
+            border-radius: 50%;
+        }
+        #pl1{
+            background-image: linear-gradient(yellow, orange);
+        }
+        #pl2{
+            background-image: linear-gradient(lightblue, green);
+        }
 
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -95,7 +117,9 @@
     </div>
   </div> -->
 
-
+  <div class="d-flex justify-content-center mt-2 mb-3">
+    <h3>Monopoly</h3>
+</div>
 
     <div class="game">
         
@@ -106,28 +130,32 @@
                     <div class="container1" id="powjail">
                         <div id="<%=list.getNodeAt(i).object.title.substring(0,3)%>">
                             <div class="<%=list.getNodeAt(i).object.title.substring(0,4)%>"></div>
+                            <div class="<%= (currentBlock1.object.id=== i ? 'token' : '') %> <%= (currentBlock2.object.id===i ? 'token2' : '') %>">
                             <div class="title"><%= list.getNodeAt(i).object.title %></div>
-                            <% if(list.getNodeAt(i).object.title.substring(0,3)==='Pow'){ %> 
-                                <br>
-                                <div>&#9889</div>
-                            <% }else{ %> 
-                                <br>
-                                <div>&#9760</div>
-                            <% } %> 
+                                <% if(list.getNodeAt(i).object.title.substring(0,3)==='Pow'){ %> 
+                                    <br>
+                                    <div>&#9889</div>
+                                <% }else{ %> 
+                                    <br>
+                                    <div>&#9760</div>
+                                <% } %> 
+                            </div>
                         </div>
                     </div>
                 <% }else{ %> 
                     <div class="container1">
                         <div id="<%=list.getNodeAt(i).object.title.substring(0,3)%>">
                             <div class="<%=list.getNodeAt(i).object.title.substring(0,4)%>"></div>
+                            <div class="<%= (currentBlock1.object.id===i ? 'token' : '') %> <%= (currentBlock2.object.id===i? 'token2' : '') %>">
                             <div class="title"><%= list.getNodeAt(i).object.title %></div>
-                            <% if(list.getNodeAt(i).object.price!==0){ %> 
-                                <br>
-                                <div class="points">&#8377 <%= list.getNodeAt(i).object.price %></div>
-                            <% }else{ %> 
-                                <br>
-                                <div class="points">Quiz</div>
-                            <% } %>     
+                                <% if(list.getNodeAt(i).object.price!==0){ %> 
+                                    <br>
+                                    <div class="points">&#8377 <%= list.getNodeAt(i).object.price %></div>
+                                <% }else{ %> 
+                                    <br>
+                                    <div class="points">Quiz</div>
+                                <% } %>  
+                            </div>   
                         </div>
                     </div>
                 <% } %> 
@@ -140,9 +168,11 @@
             <div class="container2">
                 <div id="<%=list.getNodeAt(3).object.title.substring(0,3)%>"> 
                     <div class="<%=list.getNodeAt(3).object.title.substring(0,4)%>"></div>
-                    <div class="title"><%= list.getNodeAt(3).object.title %></div>
-                    <br>
-                    <div class="points">Quiz</div>
+                    <div class="<%= (currentBlock1.object.id===3 ? 'token' : '') %> <%= (currentBlock2.object.id===3 ? 'token2' : '') %>">
+                        <div class="title"><%= list.getNodeAt(3).object.title %></div>
+                        <br>
+                        <div class="points">Quiz</div>
+                    </div>
                 </div>
             </div>
             <div class="container2" id="c2">
@@ -169,9 +199,11 @@
             <div class="container2">
                 <div id="<%=list.getNodeAt(9).object.title.substring(0,3)%>"> 
                     <div class="<%=list.getNodeAt(9).object.title.substring(0,4)%>"></div>
-                    <div class="title"><%= list.getNodeAt(9).object.title %></div>
-                    <br>
-                    <div class="points">&#8377 <%= list.getNodeAt(9).object.price %></div>
+                    <div class="<%= (currentBlock1.object.id===9 ? 'token' : '') %> <%= (currentBlock2.object.id===9 ? 'token2' : '') %>">
+                        <div class="title"><%= list.getNodeAt(9).object.title %></div>
+                        <br>
+                        <div class="points">&#8377 <%= list.getNodeAt(9).object.price %></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -182,9 +214,11 @@
             <div class="container3">
                 <div id="<%=list.getNodeAt(2).object.title.substring(0,3)%>"> 
                     <div class="<%=list.getNodeAt(2).object.title.substring(0,4)%>"></div>
-                    <div class="title"><%= list.getNodeAt(2).object.title %></div>
-                    <br>
-                    <div class="points">&#8377 <%= list.getNodeAt(2).object.price %></div>
+                    <div class="<%= (currentBlock1.object.id===2 ? 'token' : '') %> <%= (currentBlock2.object.id===2 ? 'token2' : '') %>">
+                        <div class="title"><%= list.getNodeAt(2).object.title %></div>
+                        <br>
+                        <div class="points">&#8377 <%= list.getNodeAt(2).object.price %></div>
+                    </div>
                 </div>
             </div>
             <div class="container3" id="c2">
@@ -211,9 +245,11 @@
             <div class="container3">
                 <div id="<%=list.getNodeAt(10).object.title.substring(0,3)%>"> 
                     <div class="<%=list.getNodeAt(10).object.title.substring(0,4)%>"></div>
-                    <div class="title"><%= list.getNodeAt(10).object.title %></div>
-                    <br>
-                    <div class="points">&#8377 <%= list.getNodeAt(10).object.price %></div>
+                    <div class="<%= (currentBlock1.object.id===10 ? 'token' : '') %> <%= (currentBlock2.object.id===10 ? 'token2' : '') %>">
+                        <div class="title"><%= list.getNodeAt(10).object.title %></div>
+                        <br>
+                        <div class="points">&#8377 <%= list.getNodeAt(10).object.price %></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -224,9 +260,11 @@
             <div class="container4">
                 <div id="<%=list.getNodeAt(1).object.title.substring(0,3)%>"> 
                     <div class="<%=list.getNodeAt(1).object.title.substring(0,4)%>"></div>
-                    <div class="title"><%= list.getNodeAt(1).object.title %></div>
-                    <br>
-                    <div class="points">Quiz</div>
+                    <div class="<%= (currentBlock1.object.id===1 ? 'token' : '') %> <%= (currentBlock2.object.id===1 ? 'token2' : '') %>">
+                        <div class="title"><%= list.getNodeAt(1).object.title %></div>
+                        <br>
+                        <div class="points">Quiz</div>
+                    </div>
                 </div>
             </div>
             <div class="container4" id="c2">
@@ -253,8 +291,10 @@
             <div class="container4">
                 <div id="<%=list.getNodeAt(11).object.title.substring(0,3)%>"> 
                     <div class="<%=list.getNodeAt(11).object.title.substring(0,4)%>"></div>
-                    <div class="title"><%= list.getNodeAt(11).object.title %></div>
-                    <div class="points">Quiz</div>
+                    <div class="<%= (currentBlock1.object.id===11 ? 'token' : '') %> <%= (currentBlock2.object.id===11 ? 'token2' : '') %>">
+                        <div class="title"><%= list.getNodeAt(11).object.title %></div>
+                        <div class="points">Quiz</div>
+                    </div>
                 </div>
             </div>
             </div>
@@ -265,8 +305,10 @@
             <div class="container5" id="start">
                 <div id="<%=list.getNodeAt(0).object.title.substring(0,3)%>">
                     <div class="<%=list.getNodeAt(0).object.title.substring(0,4)%>"></div>
-                    <div class="title"><%= list.getNodeAt(0).object.title %></div>
-                    <div class="inst">Collect 100 as you go</div>
+                    <div class="<%= (currentBlock1.object.id===0 ? 'token' : '') %> <%= (currentBlock2.object.id===0 ? 'token2' : '') %>"> 
+                        <div class="title"><%= list.getNodeAt(0).object.title %></div>
+                        <div class="inst">Collect 500 as you go</div>
+                    </div>
                 </div>
             </div>
             <% for(let i=15;i>11;i--){ %>
@@ -274,25 +316,29 @@
                     <div class="container5" id="fif">
                         <div id="fiftys">
                             <div class="fifty"></div>
-                            <div class="title"><%= list.getNodeAt(i).object.title %></div>
-                            <div>Quiz</div>
-                            <div>&#9876</div>
+                            <div class="title">REST</div>
+                            <div class="<%= (currentBlock1.object.id=== i ? 'token' : '') %> <%= (currentBlock2.object.id===i ? 'token2' : '') %>">
+                                <br>
+                                <br>
+                            </div>
                         </div>
                     </div>
                 <% } else{ %> 
                     <div class="container5">
-                        <div id="<%=list.getNodeAt(i).object.title.substring(0,3)%>">
+                        <div class="<%=list.getNodeAt(i).object.title.substring(0,3)%>">
                             <div class="<%=list.getNodeAt(i).object.title.substring(0,4)%>"></div>
                             <div class="title"><%= list.getNodeAt(i).object.title %></div>
-                            <% if(list.getNodeAt(i).object.price!==0){ %> 
-                                <br>
-                                <div class="points">&#8377 <%= list.getNodeAt(i).object.price %></div>
-                            <% }else if(list.getNodeAt(i).object.title=='Monopoly Tax'){ %> 
-                                <div class="points">&#8377 100</div>
-                            <% } else{ %>
-                                <br>
-                                <div class="points">Quiz</div>
-                            <% } %> 
+                            <div class="<%= (currentBlock1.object.id=== i ? 'token' : '') %> <%= (currentBlock2.object.id===i ? 'token2' : '') %>">
+                                <% if(list.getNodeAt(i).object.price!==0){ %> 
+                                    <br>
+                                    <div class="points">&#8377 <%= list.getNodeAt(i).object.price %></div>
+                                <% }else if(list.getNodeAt(i).object.title=='Monopoly Tax'){ %> 
+                                    <div class="points">&#8377 100</div>
+                                <% } else{ %>
+                                    <br>
+                                    <div class="points">Quiz</div>
+                                <% } %> 
+                            </div>
                         </div>
                     </div>
                 <% } %> 
@@ -300,11 +346,15 @@
         </div>
         </div>
     </div>
+
+    <div class="d-flex justify-content-center mt-5 mb-3">
+        <h3>Scorecard</h3>
+    </div>
         
         <div class="row mt-5">
             <div class="col-sm-6">
               <div class="card <%= (player1.chance===true ? 'card text-white bg-dark mb-3' : '') %> mb-3">
-                <h5 class="card-header"><%= users[0] %></h5>
+                <h5 class="card-header" id="pl1"><%= users[0] %></h5>
                 <div class="card-body">
                   <h5 class="card-title">Points available: &#8377 <%= player1.points %></h5>
                   <ul class="list-group list-group-flush">
@@ -323,7 +373,7 @@
             </div>
             <div class="col-sm-6">
               <div class="card <%= (player2.chance===true ? 'card text-white bg-dark mb-3' : '') %>">
-                <h5 class="card-header"><%= users[1] %></h5>
+                <h5 class="card-header"  id="pl2"><%= users[1] %></h5>
                 <div class="card-body">
                   <h5 class="card-title">Points available: &#8377 <%= player2.points %></h5>
                   <ul class="list-group list-group-flush">
